--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Annie</title>
 
-    <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="./src/css/index.css">
   </head>
   <body>
     <div class="navbar">
@@ -35,21 +35,21 @@
 
     <div class="projects">
       <div class="row">
-        <img src="./images/Portfolio-01.png" alt="project">
-        <img src="./images/Portfolio-02.png" alt="project">
-        <img src="./images/Portfolio-03.png" alt="project">
+        <img src="./src/images/Portfolio-01.png" alt="project">
+        <img src="./src/images/Portfolio-02.png" alt="project">
+        <img src="./src/images/Portfolio-03.png" alt="project">
       </div>
 
       <div class="row">
-        <img src="./images/Portfolio-04.png" alt="project">
-        <img src="./images/Portfolio-05.png" alt="project">
-        <img src="./images/Portfolio-06.png" alt="project">
+        <img src="./src/images/Portfolio-04.png" alt="project">
+        <img src="./src/images/Portfolio-05.png" alt="project">
+        <img src="./src/images/Portfolio-06.png" alt="project">
       </div>
 
       <div class="row">
-        <img src="./images/Portfolio-07.png" alt="project">
-        <img src="./images/Portfolio-08.png" alt="project">
-        <img src="./images/Portfolio-09.png" alt="project">
+        <img src="./src/images/Portfolio-07.png" alt="project">
+        <img src="./src/images/Portfolio-08.png" alt="project">
+        <img src="./src/images/Portfolio-09.png" alt="project">
       </div>
     </div>
 
@@ -58,13 +58,13 @@
 
       <div class="social-media">
         <a href="https://www.instagram.com/annieheux/">
-          <img src="./images/instagram.svg" alt="instagram">
+          <img src="./src/images/instagram.svg" alt="instagram">
         </a>
         <a href="https://www.linkedin.com/in/pajaiannieheu/">
-          <img src="./images/linkedin.svg" alt="linkedin">
+          <img src="./src/images/linkedin.svg" alt="linkedin">
         </a>
         <a href="https://www.behance.net/pjannieheu">
-          <img src="./images/behance.svg" alt="linkedin">
+          <img src="./src/images/behance.svg" alt="linkedin">
         </a>
       </div>
 
