--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
 
     <div class="splash">
-      <h1 class="header">Hi, I'm Annie Hue, a Visual Designer based in Santa Cruz.</h1>
+      <h1 class="header">Hi, I'm Annie Heu, a Visual Designer based in Santa Cruz.</h1>
     </div>
 
     <div id="about" class="about">
