--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       </div>
 
       <div class="copyright">
-        Copyright @ Pai Jai Annie Heu 2017
+        Copyright @ Pa Jai Annie Heu 2017
       </div>
     </div>
 
